--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,7 +9,7 @@ example-navbar-collapse-1" aria-expanded="false">
  <span class="icon-bar"></span>
  <span class="icon-bar"></span>
  </button>
- <a class="navbar-brand" href="#">Brand</a>
+ <%= link_to "Aya's Articles", root_path, class: 'navbar-brand' %>
  </div>
  <!-- Collect the nav links, forms, and other content for toggling -->
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,6 +37,8 @@ aria-expanded="false">Dropdown <span class="caret"></span></a>
  <button type="submit" class="btn btn-default">Submit</button>
  </form>
  <ul class="nav navbar-nav navbar-right">
+   <li><%= link_to "About Us", about_path %></li>
+   <li><%= link_to "Contact Us", contact_path %></li>
    <li><%= link_to "Sign Up", new_user_registration_path %></li>
    <li><%= link_to "Sign In", new_user_session_path %></li>
    <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
