--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
  <div class="container-fluid">
- <!-- Brand and toggle get grouped for better mobile display -->
+  
+   <!-- Brand and toggle get grouped for better mobile display -->
  <div class="navbar-header">
  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-
 example-navbar-collapse-1" aria-expanded="false">
@@ -11,11 +12,13 @@ example-navbar-collapse-1" aria-expanded="false">
  </button>
  <%= link_to "Aya's Articles", root_path, class: 'navbar-brand' %>
  </div>
+
  <!-- Collect the nav links, forms, and other content for toggling -->
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
  <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
  <li><a href="#">Hello</a></li>
+
  <li class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -30,30 +33,38 @@ aria-expanded="false">Dropdown <span class="caret"></span></a>
  </ul>
  </li>
  </ul>
+
  <form class="navbar-form navbar-left" role="search">
  <div class="form-group">
  <input type="text" class="form-control" placeholder="Search">
  </div>
  <button type="submit" class="btn btn-default">Submit</button>
  </form>
+
  <ul class="nav navbar-nav navbar-right">
    <li><%= link_to "About Us", about_path %></li>
    <li><%= link_to "Contact Us", contact_path %></li>
+  
+   <% if !current_user %>
    <li><%= link_to "Sign Up", new_user_registration_path %></li>
    <li><%= link_to "Sign In", new_user_session_path %></li>
-   <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+
+   <% else %>
    <li class="dropdown">
- <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-aria-expanded="false">Dropdown <span class="caret"></span></a>
- <ul class="dropdown-menu">
- <li><a href="#">Action</a></li>
- <li><a href="#">Another action</a></li>
- <li><a href="#">Something else here</a></li>
- <li role="separator" class="divider"></li>
- <li><a href="#">Separated link</a></li>
+   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+         aria-expanded="false"><%= current_user.username %> </a>
+     <ul class="dropdown-menu">
+     <li><a href="#">Action</a></li>
+     <li><a href="#">Another action</a></li>
+     <li><%= link_to "Edit My Profile", edit_user_registration_path %></li>
+     <li role="separator" class="divider"></li>
+     <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+     </ul>
+   </li>
+ <% end %>
  </ul>
- </li>
- </ul>
+
+
  </div><!-- /.navbar-collapse -->
  </div><!-- /.container-fluid -->
 </nav>
