--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New article</h1>
+<div class= 'container'>
+  <h1>New article</h1>
  
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+  <%= render 'form' %>
+
+  <h4>
+  <%= link_to 'Back', articles_path %>
+  </h4>
+
+</div>
