--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -40,7 +40,7 @@ aria-expanded="false">My Socials </a>
  </ul>
 
  <ul class="nav navbar-nav navbar-right">
-   <li><%= link_to "Create An Article", new_article_path %></li>
+   <li><%= link_to "Create An Article", new_article_path if current_user %></li>
    <li><%= link_to "About Us", about_path %></li>
   
    <% if !current_user %>
