--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -143,8 +143,10 @@ ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 <div class="well">
   <h4>Recent Posts</h4>
  <% @last_articles.each do |a| %>
-   <h4><strong><%= link_to a.title, a %></strong>
-   <p> <%= truncate(a.text) %> </p></h4>
+   <h4>
+     <strong><%= link_to a.title, a %></strong><br />
+     Created by: <%= a.user.username %>
+     <p> <%= truncate(a.text) %> </p></h4>
  <% end %>
  </div>
  </div>
