--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,7 +17,7 @@ example-navbar-collapse-1" aria-expanded="false">
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
  <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
- <li><a href="#">Hello</a></li>
+  <button class="dropbtn"><li><%= link_to "All Articles", articles_path %></li></button>
 
   <button class="dropbtn"><li><%= link_to "Upcoming Socials", about_path %></li></button>
   <button class="dropbtn"><li><%= link_to "Past Socials", about_path %></li></button>
