--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<%# if current_user %>
 
 </footer>
 <footer class="footer-distributed">
@@ -11,49 +11,13 @@
   <div class="footer-left">
   <p class="footer-links">
   ·
-  <a class="page-scroll" href="#portfolio">Contact Us</a>
+  <%= link_to "About Us", about_path, class: "page-scroll" %>
   ·
-  <a class="page-scroll" href="#services">About Us</a>
+  <%= link_to "Contact Us", contact_path, class: "page-scroll" %>
   ·
   </p>
 <p> </p>
 </div>
 </footer>
 
-<% else %>
 
-<footer class="footer-distributed">
-  <div class="footer-left">
-  <h3>Company<span>logo</span></h3>
-    <p class="footer-links">
-      <a href="#">Home</a>
-      ·
-      <a href="#">Blog</a>
-      ·
-      <a href="#">Pricing</a>
-      ·
-      <a href="#">About</a>
-      ·
-      <a href="#">Faq</a>
-      ·
-      <a href="#">Contact</a>
-    </p>
-    <p class="footer-company-name">Company Name &copy; 2015</p>
-  <div class="footer-icons">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-    <a href="#"><i class="fab fa-github"></i></a>
-  </div>
-  </div>
-  <div class="footer-right">
-    <p>Contact Us</p>
-      <form action="#" method="post">
-      <input type="text" name="email" placeholder="Email" />
-      <textarea name="message" placeholder="Message"></textarea>
-      <button>Send</button>
-      </form>
-  </div>
-</footer>
-
-<% end %>
