--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
   <%= @article.text %>
 </p>
 
-<h2>Comments</h2>
+<h2><%= @article.comments.count %> Comments</h2>
 <%= render @article.comments %>
 
 <h3>Add a comment:</h3>
