--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,6 +5,7 @@
  <p class="lead">Test Text</p>
  <ul class="list-unstyled">
  <li>List Item</li>
+ <%= video_tag "vid_choclo.mp4", :size => "320x240", :controls => true, :controlsList => "nodownload", :playbackRates => "[0.5 1 1.5 2]" %>
  <li>List Item 2</li>
  </ul>
  </div>
