--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,1 +1,12 @@
 %h1 This is posts#index page
+
+%br
+
+- @posts.each do |post|
+  %h2= link_to post.title, post
+  %p
+    Published at
+    = time_ago_in_words(post.created_at)
+
+%br
+= link_to "New Post", new_post_path
