--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -7,6 +7,6 @@
   %p
     Published at
     = time_ago_in_words(post.created_at)
-
+    = post.user.username
 %br
 = link_to "New Post", new_post_path
