--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,17 +10,17 @@ example-navbar-collapse-1" aria-expanded="false">
  <span class="icon-bar"></span>
  <span class="icon-bar"></span>
  </button>
- <%= link_to "Aya's Articles", root_path, class: 'navbar-brand' %>
+ <%= link_to "Tensor Flow", root_path, class: 'navbar-brand' %>
  </div>
 
  <!-- Collect the nav links, forms, and other content for toggling -->
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
  <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-  <button class="dropbtn"><li><%= link_to "All Articles", articles_path %></li></button>
+  <button class="dropbtn"><li><%= link_to "All Chapters", articles_path %></li></button>
 
-  <button class="dropbtn"><li><%= link_to "Upcoming Socials", about_path %></li></button>
-  <button class="dropbtn"><li><%= link_to "Past Socials", about_path %></li></button>
+  <button class="dropbtn"><li><%= link_to "Discussion Board", about_path %></li></button>
+  <button class="dropbtn"><li><%= link_to "Something Else", about_path %></li></button>
  
   <li class="dropdown">
    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
