--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,9 @@
 %h1= @post.title
 %p= @post.content
 
+#buttons
+  = link_to "Reply", new_post_path
+
 = link_to "Edit", edit_post_path(@post)
 = link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to do this?" }
 = link_to "Return", posts_path
