played around with post show view page and nav links

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,7 +17,7 @@ example-navbar-collapse-1" aria-expanded="false">
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
   <li><%= link_to "All Chapters", about_path %></li>
-  <li><%= link_to "Discussion Board", about_path %></li></button>
+  <li><%= link_to "Discussion Board", posts_path %></li></button>
   <li><%= link_to "Something Else", about_path %></li></button> 
  </ul>
 
