--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,5 +1,7 @@
-%h1= @post.title
-%p= @post.content
+#post_content
+  %h1= @post.title
+  %h2= @post.user.username
+  %p= @post.content
 
 #buttons
   = link_to "Reply", new_post_path
