--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,33 +8,46 @@
 	h1 {
 		font-weight: 100;
 		font-size: 2em;
-		color: #397CAC;
+		color: #F23E29;
 		margin-top: 0;
 	}
 	h2 {
-		font-weight: 100;
-		font-size: 1.5em;
-		color: #397CAC;
+		font-weight: 75;
+		font-size: 1.25em;
+		color: #FF5B00;
 		margin-top: 0;
 	}
 	p {
-		color: #B2BAC2;
+		color: #777777;
 		font-size: 0.9em;
 		line-height: 1.5;
-		font-size: 100;
+		font-weight: 350;
 	}
 }
 
-#buttons {
+#buttons_right {
 	float: right;
 	a {
 		line-height: 60px;
-		background: #397CAC;
+		background: #E99440;
+		padding: .5em 1em;
+		border-radius: 0.2em;
+		color: black;
+		text-decoration: none;
+		font-weight: 450;
+	}
+}
+
+#buttons_left {
+	float: left;
+	a {
+		line-height: 60px;
+		background: #E4D969;
 		padding: .5em 1em;
 		border-radius: 0.2em;
 		color: white;
 		text-decoration: none;
-		font-weight: 100;
+		font-weight: 400;
 	}
 }
 
@@ -43,16 +56,16 @@
 	padding: 2em 5%;
 	border-radius: .5em;
 	.post {
-		margin: 1em 0;
-		padding: 1em 0;
+		margin: .5em 0;
+		padding: .5em 0;
 		border-bottom: 1px solid #D1d1d1;
 		.title {
 			margin: 0;
 			a {
-				color: #397CAC;
+				color: #F23E29;
 				text-decoration: none;
 				font-weight: 100;
-				font-size: 1.25rem;
+				font-size: 2rem;
 			}
 		}
 		.date {
