--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,15 +1,18 @@
-%h1 This is posts#index page
+%h1 Discussion Board
+
+#buttons_right
+  = link_to "Ask a Question", new_post_path
 
 %br
 
 #posts
-- @posts.each do |post|
-  %h2= link_to post.title, post
-  %p
-    Published at
-    = time_ago_in_words(post.created_at)
-    by
-    %strong 
-      = post.user.username
+  - @posts.each do |post|
+    .post
+      %h2.title= link_to post.title, post
+      %p.date
+        Published at
+        = time_ago_in_words(post.created_at)
+        by
+        %strong
+          = post.user.username
 %br
-= link_to "New Post", new_post_path
