--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,12 +33,15 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <button type="button" class="btn btn-success btn-lg">
+      <%= f.button :submit, "Update" %>
+    </button>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<div id="buttons_left">
+  <%= link_to "Back", :back %>
+</div>
