--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,8 +28,13 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <button type="button" class="btn btn-success btn-lg">
+      <%= f.button :submit, "Sign up" %>
+    </button>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div id=buttons_left>
+  <%= render "devise/shared/links" %>
+</div>
+
