--- a/app/views/layouts/_oldnav.html.erb
+++ b/app/views/layouts/_oldnav.html.erb
@@ -1,7 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+ <div class="container-fluid">
   
    <!-- Brand and toggle get grouped for better mobile display -->
-   <ul class="nav navbar-brand navbar-left"><%= link_to "Tensor Flow", root_path, class: 'navbar-brand' %></ul>
+ <div class="navbar-header">
+ <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-
+example-navbar-collapse-1" aria-expanded="false">
+ <span class="sr-only">Toggle navigation</span>
+ <span class="icon-bar"></span>
+ <span class="icon-bar"></span>
+ <span class="icon-bar"></span>
+ </button>
+ <%= link_to "Tensor Flow", root_path, class: 'navbar-brand' %>
+ </div>
 
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -10,10 +20,8 @@
  <!-- Collect the nav links, forms, and other content for toggling -->
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="navbar-nav mr-auto">
-   <li class="nav-item active">
-     <a class="nav-link"><%= link_to "All Chapters", about_path %></a>
-   </li>
-   <li><%= link_to "Discussion Board", posts_path %></li>
+   <li class="nav-item active"><%= link_to "All Chapters", about_path %></li>
+    <li><%= link_to "Discussion Board", posts_path %></li>
 
     <li><%= link_to "Create An Article", new_article_path if current_user %></li>
     <li><%= link_to "About Us", about_path %></li>
