--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,31 +3,29 @@
    <!-- Brand and toggle get grouped for better mobile display -->
    <ul class="nav navbar-brand navbar-left"><%= link_to "Tensor Flow", root_path, class: 'navbar-brand' %></ul>
 
- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
- </button>
-
- <!-- Collect the nav links, forms, and other content for toggling -->
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
- <ul class="navbar-nav mr-auto">
-   <li class="nav-item active">
-     <a class="nav-link"><%= link_to "All Chapters", about_path %></a>
-   </li>
-   <li><%= link_to "Discussion Board", posts_path %></li>
+ <ul class="navbar-nav">
+   <%= link_to "All Chapters", about_path %></ul>
+ <ul class="navbar-nav">
+   <%= link_to "Discussion Board", posts_path %></ul>
+ <ul class="navbar-nav">
+   <%= link_to "Create An Article", new_article_path if current_user %></ul>
+ <ul class="navbar-nav">
+   <%= link_to "About Us", about_path %>
+ </ul>
 
-    <li><%= link_to "Create An Article", new_article_path if current_user %></li>
-    <li><%= link_to "About Us", about_path %></li>
-  
-   <% if !current_user %>
-       <li><%= link_to "Sign Up", new_user_registration_path %></li>
-       <li><%= link_to "Sign In", new_user_session_path %></li>
-
-   <% else %>
-     <li><%= link_to "Contact Us", contact_path %></li>
-     <li><%= link_to current_user.username, edit_user_registration_path %></li>
-  <!li role="separator" class="divider">
-  <!ul class="nav navbar-nav navbar-right">
-       <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li></ul>
+ <% if !current_user %>
+   <ul class="navbar-nav">
+     <%= link_to "Sign Up", new_user_registration_path %></ul>
+   <ul class="navbar-nav">
+     <%= link_to "Sign In", new_user_session_path %></ul>
+ <% else %>
+   <ul class="navbar-nav">
+     <%= link_to "Contact Us", contact_path %>
+   <ul class="navbar-nav">
+     <%= link_to current_user.username, edit_user_registration_path %></ul>
+   <ul class="navbar-nav">
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %></ul>
  <% end %>
 
 
